<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSelectAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_local_audio"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnSelectVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_local_video"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etMediaUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/media_url_hint"
        android:inputType="textUri"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnPlayUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_from_url_button"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlists_header_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnViewPlaylists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_manage_playlists_button" />

</LinearLayout>